fixed issue where text was in wrong font in Firefox textarea's

--- a/app/base/_typography.scss
+++ b/app/base/_typography.scss
@@ -83,6 +83,7 @@ body {
     }
     input,
     textarea {
+        font-family: $font-family;      
         font-size: .9em;
         color: $text-color;
     }
